[package]

name = "rustful"
version = "0.1.0-pre"
authors = ["hello@erikhedvall.nu"]

[lib]

name = "rustful"
path = "src/lib.rs"

[features]
default = ["macros"]
macros = ["rustful_macros"]

[dependencies]
time = "*"
url = "*"

[dependencies.hyper]
git = "https://github.com/jihokoo/hyper.git"

[dependencies.rustful_macros]
path = "macros"
optional = true
